--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "@nuxt/image": "2.0.0",
     "@nuxt/ui": "4.1.0",
+    "@pinia/nuxt": "^0.11.3",
     "@vee-validate/zod": "^4.15.1",
     "nuxt": "^4.2.0",
+    "pinia": "^3.0.4",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5.6.3",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.22",
