--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,9 +16,6 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false,
-    "paths": {
-      "@prisma/client": ["./prisma/generated"]
-    }
+    "noFallthroughCasesInSwitch": false
   }
 }
