--- a/backend/.env.example
+++ b/backend/.env.example
@@ -31,3 +31,10 @@ LOG_LEVEL=info
 SEED_USER_EMAIL=admin@example.com
 SEED_USER_NAME=Admin User
 SEED_USER_PASSWORD=admin123
+
+# OpenAI
+OPENAI_API_KEY=your-openai-api-key
+# 요약용 모델 (비용 효율적)
+OPENAI_SUMMARY_MODEL=gpt-4o-mini
+# 컨텐츠 생성용 모델 (고품질)
+OPENAI_GENERATION_MODEL=gpt-4o
