--- a/backend/package.json
+++ b/backend/package.json
@@ -41,10 +41,13 @@
     "cheerio": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dayjs": "^1.11.19",
+    "openai": "^6.8.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "tiktoken": "^1.0.22"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
