--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "cheerio": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.19",
     "openai": "^6.8.1",
     "passport": "^0.7.0",
@@ -59,6 +60,7 @@
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^6.0.0",
     "@types/cheerio": "^0.22.35",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
