--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,7 +6,7 @@ APP_NAME=blog-mine-backend
 APP_VERSION=0.0.1
 
 # Server
-PORT=3000
+PORT=9706
 
 # Database
 DB_HOST=localhost
@@ -21,8 +21,8 @@ DB_LOGGING=false
 JWT_SECRET=your-secret-key
 JWT_EXPIRES_IN=1d
 
-# CORS
-CORS_ORIGIN=http://localhost:3000
+# CORS (comma-separated for multiple origins)
+CORS_ORIGIN=http://localhost:8706,http://localhost:3001,http://localhost:3000
 
 # Logging
 LOG_LEVEL=info
