--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,8 @@
     "class-validator": "^0.14.1",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.19",
+    "iconv-lite": "^0.7.0",
+    "nanoid": "^5.1.6",
     "openai": "^6.8.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -64,6 +66,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^7.0.4",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "dotenv": "^17.2.3",
@@ -73,6 +76,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "nodemailer": "^7.0.10",
     "prettier": "^3.4.2",
     "prisma": "^6.19.0",
     "source-map-support": "^0.5.21",
