--- a/.env.production.example
+++ b/.env.production.example
@@ -27,8 +27,8 @@ DATABASE_URL="postgresql://postgres:your-secure-rds-password@your-rds-instance.x
 JWT_SECRET=your-strong-production-secret-change-this-min-32-chars
 JWT_EXPIRES_IN=1d
 
-# CORS (CloudFront 도메인)
-CORS_ORIGIN=https://yourdomain.com
+# CORS (프론트엔드 도메인)
+CORS_ORIGIN=https://blogmine.ai.kr
 
 # Logging
 LOG_LEVEL=warn
