--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "cheerio": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.19",
     "iconv-lite": "^0.7.0",
@@ -62,6 +63,7 @@
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^6.0.0",
     "@types/cheerio": "^0.22.35",
+    "@types/cookie-parser": "^1.4.10",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
