--- a/nginx-unified.conf
+++ b/nginx-unified.conf
@@ -137,11 +137,11 @@ http {
     }
 
     # ==========================================
-    # 프론트엔드 서버 블록 (blogmine.ai.kr)
+    # 프론트엔드 서버 블록 (blogmine.ai.kr + 기본 서버)
     # ==========================================
     server {
-        listen 80;
-        server_name blogmine.ai.kr;
+        listen 80 default_server;
+        server_name blogmine.ai.kr localhost _;
 
         # 보안 헤더 (프론트엔드용)
         add_header X-Frame-Options "SAMEORIGIN" always;
