--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@nuxt/ui": "4.1.0",
     "@pinia/nuxt": "^0.11.3",
     "@vee-validate/zod": "^4.15.1",
+    "apexcharts": "^5.3.6",
     "nuxt": "^4.2.0",
     "pinia": "^3.0.4",
     "tailwindcss": "^4.1.16",
@@ -23,6 +24,7 @@
     "vee-validate": "^4.15.1",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
+    "vue3-apexcharts": "^1.10.0",
     "zod": "^3.24.0"
   },
   "packageManager": "pnpm@9.12.3+sha1.4fb96925d434c491285182acf29803bb9aa2e6e5"
