--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,5 +27,10 @@
     "vue3-apexcharts": "^1.10.0",
     "zod": "^3.24.0"
   },
-  "packageManager": "pnpm@9.12.3+sha1.4fb96925d434c491285182acf29803bb9aa2e6e5"
+  "packageManager": "pnpm@9.12.3+sha1.4fb96925d434c491285182acf29803bb9aa2e6e5",
+  "devDependencies": {
+    "@iconify-json/heroicons": "^1.2.3",
+    "@iconify-json/ic": "^1.2.4",
+    "@iconify-json/lucide": "^1.2.75"
+  }
 }
