카카오 계정 연결

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -38,3 +38,9 @@ OPENAI_API_KEY=your-openai-api-key
 OPENAI_SUMMARY_MODEL=gpt-4o-mini
 # 컨텐츠 생성용 모델 (고품질)
 OPENAI_GENERATION_MODEL=gpt-4o
+
+# Kakao OAuth
+KAKAO_CLIENT_ID=your-kakao-client-id
+KAKAO_CLIENT_SECRET=your-kakao-client-secret
+KAKAO_REDIRECT_URI=http://localhost:9706/auth/callback/kakao
+KAKAO_ADMIN_KEY=your-kakao-admin-key
