--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "prisma:seed": "dotenv -e .env.development -- ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.958.0",
     "@nestjs/axios": "^3.1.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -46,6 +47,8 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.19",
     "iconv-lite": "^0.7.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nanoid": "^5.1.6",
     "openai": "^6.8.1",
     "passport": "^0.7.0",
@@ -68,6 +71,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/multer-s3": "^3.0.3",
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^7.0.4",
     "@types/passport-jwt": "^4.0.1",
