--- a/nginx-unified.conf
+++ b/nginx-unified.conf
@@ -112,10 +112,10 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
 
-            # 타임아웃
+            # 타임아웃 (OpenAI API 호출 등 긴 작업 지원)
             proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
 
             # 버퍼링
             proxy_buffering on;
