--- a/backend/package.json
+++ b/backend/package.json
@@ -39,7 +39,7 @@
     "@nestjs/schedule": "^6.0.1",
     "@prisma/client": "^6.19.0",
     "axios": "^1.7.9",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "cheerio": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -66,6 +66,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^6.0.0",
+    "@types/bcryptjs": "^3.0.0",
     "@types/cheerio": "^0.22.35",
     "@types/cookie-parser": "^1.4.10",
     "@types/crypto-js": "^4.2.2",
